# pico_libraries_touchscreen

./: CMakeLists.txt
include/: ft6336u.h  gt911.h  touchscreen.h
src/: ft6336u.cpp  gt911.cpp  touchscreen.cpp
test/: CMakeLists.txt  ft6336u_test.cpp  gt911_test.cpp  ts_gpio_cfg.h
